<resources>
    <string name="app_name">Tasked</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="desc">Description of Event:</string>
    <string name="descPrompt">Please fill in your event details here</string>
    <string name="name">Event Name</string>
    <string name="incorrectPass">Your app has been locked, please contact an administrator or reset your password</string>
    <string name="createAccount">Create a new account</string>
    <string name="forgetPass">Forget password</string>
    <string name="changePass">Reset your password</string>
    <string name="profile">Profile</string>
    <string name="notif">Receive notification when event starts</string>
    <string name="NUSMODScompat">Import timetable using NUSMODS (Beta):</string>
    <string name="NUSMODScompatHint">NUSMODS URL</string>
    <string name="templateHeader">Default Event Templates</string>
    <string name="customTemplates">Custom Event Templates</string>
    <string name="templateDescription">Create your own templates</string>

</resources>