<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <TextView
        android:id="@+id/tvWIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CURRENTLY WORK IN PROGRESS"
        android:background="@drawable/btn_shape_warning"
        android:textSize="50sp"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvWIP">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mustard"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/templateHeader"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDefaultTemplates"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mustard"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customTemplates"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/llCustomTemplates"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:backgroundTint="@color/mustard"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/templateDescription"/>

</RelativeLayout>